test/k8sT/manifests/star-wars-demo/policy/default-allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-allow-all
spec: 
  endpointSelector:
    matchLabels:
      {}
  ingress: 
  - fromEndpoints:
    - {}
